<resources>
    <string name="app_name">Know Your Government</string>
    <string name="list_separator">List Separator</string>
    <string name="menuInfoItemText">Information</string>
    <string name="menuLocationItemText">Update Location</string>
    <string name="title_activity_about">AboutActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="powered_by">Powered by:</string>
    <string name="copyrightText">© 2020, Tanner Dyer</string>
    <string name="version">Version 1.0</string>
    <string name="dgoogle_api"><a href="https://developers.google.com/civic-information/">Google Civic Information API</a></string>
    <string name="google_api">Google Civic Information API</string>
    <string name="websitePlaceholder">Website:</string>
    <string name="emailPlaceholder">Email:</string>
    <string name="phonePlaceholder">Phone:</string>
    <string name="addressPlaceholder">Address:</string>
    <string name="youtube_icon">Youtube Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="political_official_image">Political Official Image</string>
    <string name="politial_official_party_image">Politial Official Party Image</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="no_network_data">Data cannot be accessed/loaded without an internet connection.</string>
</resources>