<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".OfficialActivity"
    android:id="@+id/officialView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="200dp">

        <TextView
            android:id="@+id/locationTextViewOfficial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_theme"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Chicago, IL 60616"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/officialTitleTextViewOfficial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="U.S. Senator"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTextViewOfficial" />

        <TextView
            android:id="@+id/officialNameTextViewOfficial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Tammy Duckworth"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/officialTitleTextViewOfficial" />

        <TextView
            android:id="@+id/officialPartyTextViewOfficial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="(Democratic Party)"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/officialNameTextViewOfficial" />

        <ImageView
            android:id="@+id/officialImageView"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:src="@drawable/missing"
            android:scaleType="fitCenter"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/officialPartyTextViewOfficial"
            app:layout_constraintBottom_toTopOf="@+id/addressHorizontalLayout"
            android:contentDescription="@string/political_official_image" />

        <ImageView
            android:id="@+id/partyImageView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/dem_logo"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="@id/officialImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/politial_official_party_image" />

        <LinearLayout
            android:id="@+id/addressHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/officialImageView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressPlaceholderTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/addressPlaceholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/addressTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressHorizontalLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phonePlaceholderTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/phonePlaceholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/phoneTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneHorizontalLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailPlaceholderTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/emailPlaceholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/emailTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/websiteHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailHorizontalLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/websitePlaceholderTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/websitePlaceholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/websiteTextViewOfficial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mediaIconsHorizontalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/websiteHorizontalLayout"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/facebookImageView"
                android:visibility="gone"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/officialImageView"
                android:contentDescription="@string/facebook_icon"
                tools:ignore="Suspicious0dp" />

            <ImageView
                android:id="@+id/blankImageView"
                android:visibility="gone"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/officialImageView"
                android:contentDescription="@string/twitter_icon" />

            <ImageView
                android:id="@+id/twitterImageView"
                android:visibility="gone"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/officialImageView"
                android:contentDescription="@string/twitter_icon" />

            <ImageView
                android:id="@+id/blankImageView2"
                android:visibility="gone"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/officialImageView"
                android:contentDescription="@string/twitter_icon" />

            <ImageView
                android:id="@+id/youtubeImageView"
                android:visibility="gone"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:src="@drawable/youtube"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/officialImageView"
                android:contentDescription="@string/youtube_icon" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>